# rust-playground

./: .gitignore  flake.nix  rust-toolchain.toml
ai-stuff/ollama-stuff/slms-stuff/playing-with-tools/: .env  Cargo.toml
ai-stuff/ollama-stuff/slms-stuff/playing-with-tools/src/: main.rs
arduino/blinky_blinky/: Cargo.toml  README.md
axum-stuff/csv-api/: Cargo.toml
axum-stuff/csv-api/migrations/: 20241120003002_create_tables.up.sql
axum-stuff/csv-api/src/: http.rs  main.rs  migrate.rs  model.rs
black-hat-rust/port_scanner/: .gitignore  Cargo.toml  server.ts
black-hat-rust/port_scanner/src/: main.rs  model.rs  scanner.rs
black-hat-rust/sha1_cracker/: Cargo.toml
black-hat-rust/sha1_cracker/src/: main.rs
discord-bots/e01_basic_ping_bot/: Cargo.toml
frolicking-with-serdee/: .gitignore  Cargo.toml  flake.nix
frolicking-with-serdee/src/: main.rs
frolicking-with-serdee/src/lib/: custom.rs  mod.rs  parser.rs  paystack.rs  serialize_enum.rs
learning-leptos/csr-app/: Cargo.toml
learning-leptos/csr-app/src/: main.rs
learning-leptos/view-transitions-001/: Cargo.toml  index.html
learning-leptos/view-transitions-001/assets/: reset.css
learning-leptos/view-transitions-001/src/: main.rs
learning-leptos/view-transitions-001/src/components/: section.rs
learning-leptos/view-transitions-001/view_transitions_backend/: .gitignore  Cargo.toml
learning-leptos/view-transitions-001/view_transitions_backend/assets/: .gitignore  README.md
learning-leptos/view-transitions-001/view_transitions_backend/src/: http.rs  migrate.rs  model.rs  utils.rs
learning-leptos/view-transitions-001/view_transitions_core/: Cargo.toml
learning-leptos/view-transitions-001/view_transitions_core/src/: lib.rs
learning-leptos/view-transitions-001/view_transitions_frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  prompt.md
learning-leptos/view-transitions-001/view_transitions_frontend/assets/: blog.css  styles.css
learning-leptos/view-transitions-001/view_transitions_frontend/src/: main.rs  utils.rs
learning-leptos/view-transitions-001/view_transitions_frontend/src/components/: blog.rs  mod.rs
learning-leptos/view-transitions-001/view_transitions_frontend/src/views/: blog.rs  home.rs  mod.rs
playing-with-llms/kalosm-trial/: Cargo.toml
playing-with-llms/kalosm-trial/src/: main.rs
playing-with-llms/ollama-test/: Cargo.toml  context.json
playing-with-llms/ollama-test/examples/: c01-simple.rs  c02-context.rs
playing-with-llms/ollama-test/src/: lib.rs
re-axum/: .gitignore  Cargo.toml  README.md  bun.lockb  package.json
re-axum/src/: main.rs  utils.rs
scratchpad/: Cargo.toml
scratchpad/src/: main.rs  playing_with_references.rs
solana-playground/: .gitignore  flake.nix
solana-playground/connect-wallet-demo/: package.json
solana-playground/connect-wallet-demo/src/: App.tsx
solana-playground/hello-world/src/: index.ts
the-rust-book/ch-11/minigrep/src/: lib.rs  (+1 more)
vivaldi-cleaner/: Cargo.toml
vivaldi-cleaner/src/: main.rs
(+60 files in other folders)
