[package]
name = "re-axum"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
rand = "0.8.5"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tower-service = "0.3.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
vercel_runtime = "1.1.4"

[build]
target = "x86_64-unknown-linux-musl"

[[bin]]
name = "main"
path = "src/main.rs"
