[package]
name = "view_transitions_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
axum = { version = "0.7.9", features = ["tokio"] }
clap = { version = "4.5.21", features = ["cargo"] }
csv = "1.3.1"
csv-async = "1.3.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
http = "1.1.0"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
view_transitions_core = { path = "../view_transitions_core" }
