[package]
name = "view_transitions_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
leptos = { version = "0.6.15", features = ["csr"] }
leptos_reactive = { version = "0.6.15", features = ["csr", "serde"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
view_transitions_core = { path = "../view_transitions_core" }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["Document", "ViewTransition"] }

