[package]
name = "playing-with-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
# env_logger = "0.11.7"
log = "0.4.26"
ollama-rs = { version = "0.2.6", features = ["stream"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
